Bug 1910153 - Support non-sRGB color interpolation when painting background gradient. r=gfx-reviewers,lsalzman,ahale

Differential Revision: https://phabricator.services.mozilla.com/D218392